# sol-middleware-program

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json  pnpm-lock.yaml
.github/: .env
.github/workflows/: benchmark-summary.yml  benchmark.yml  build-programs.yml  build-rust-client.yml  client-sdk.yml  create-release.yml  deploy-program.yml  main.yml  publish-rust-client.yml  solana-program.yml  test-programs.yml  test-rust-client.yml
clients/js/: package-lock.json  package.json  pnpm-lock.yaml
clients/js/src/: intex.ts
clients/js/test/: example.test.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/rust/tests/: middleware.rs
configs/: kinobi.cjs  shank.cjs
configs/scripts/program/: dump_oracle_example.sh
programs/middleware-program/: Cargo.toml
programs/middleware-program/src/: entrypoint.rs  instruction.rs  lib.rs
programs/middleware-program/src/processor/: middleware_processor.rs  mod.rs
programs/middleware-program/src/state/: MetaEntry.rs  dynamic_instruction.rs  meta_entry.rs  mod.rs
programs/spi-program/src/: entrypoint.rs  instruction.rs  lib.rs
src/processor/: middleware_processor.rs
src/state/: DynamicInstruction.rs  mod.rs
