[package]
name = "spi-program"
edition = "2021"
repository = "https://github.com/project-codexia/sol-middleware-program"
description = "Solana program for Solana Progam Interface (SPI) middleware"
license-file = "../../LICENSE"
readme = "README.md"
version = "0.0.1-beta.1"

[features]
anchor = ["dep:anchor-lang", "kaigan/anchor"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
anchor-lang = { version = "0.30.0", optional = true }
base64 = "0.22.0"
borsh = "^0.10"
modular-bitfield = "0.11.2"
num-derive = "^0.3"
num-traits = "^0.2"
rmp-serde = "1.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = "1.0"
serde_with = { version = "^3.0", optional = true }
solana-program = "> 1.14"
thiserror = "^1.0"

kaigan = { version = "0.2.6", features = ["serde"], optional = false }

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "> 1.14"
solana-sdk = "> 1.14"
