[package]
name = "sol-middleware-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-program = "2.2.1"
shank = "0.4.2"
borsh = "^0.10"
borsh-derive = "^0.10"
ahash = "0.8.11"
thiserror = "^1.0"
bytemuck = "1.14.1"


[lib]
name = "sol_middleware_program"
crate-type = ["cdylib", "lib"]