[package]
name = "sol-middleware-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
borsh = "^0.10"
shank = "0.4.2"
modular-bitfield = "0.11.2"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "^1.17"
thiserror = "^1.0"
bytemuck = "1.14.1"
mpl-utils = "0.3.5"
podded = "0.5.1"
strum = { version = "0.26.1", features = ["derive"] }

[lib]
name = "sol_middleware_program"
crate-type = ["cdylib", "lib"]
